--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	<body>
 		<h1>Welcome to ChainDocs - Trade Finance Blockchain Explorer</h1>
 		<p>Manage your trade finance transactions securely on the blockchain</p><br><br>
+		<div class="btn-container">
 		<a href="create_trade.html">
-			<button>Create Trade ></button>
+			<button id="b1">Create Trade ></button>
 		</a>
 		<a href="upload_document.html">
-		<button>Upload Documents</button>
+		<button id="b2">Upload Documents</button>
 		</a>
 		<a href="view_trades.html">
-		<button>View Trades ></button>
+		<button id="b3">View Trades ></button>
 		</a>
+		</div>
 	</body>
 </html>
